<resources>
    <string name="app_name">Myth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="userprofile">userProfile</string>
    <string name="full_name">Full Name</string>
    <string name="emailuserprofile">emailUserProfile</string>
    <string name="logoutButton">Logout</string>
    <string name="scan_qr_code">your QR code</string>
    <string name="close_friends_list">connections list</string>
    <string name="change_password">change password</string>
    <string name="add_event">Add Event</string>
    <string name="add_event_calendar">Add Event</string>
    <string name="add_a_new_event_top_text">Add a new Event</string>
    <string name="name_of_the_event">Name of the Event</string>
    <string name="add_event_btn">Add Event</string>
    <string name="details_new_event">Details</string>
    <string name="duration_event">Duration</string>
    <string name="select_user_usersList">Select User</string>
    <string name="close_friends">Close Friends</string>
    <string name="enter_your_hometown">enter your Hometown</string>
    <string name="delete_account">Delete Account</string>
    <string name="today_s_events">Today\'s Events</string>
    <string name="suggest_timing_btn">suggest timing</string>
    <string name="search_timeslot_btn">Search timeslot</string>
    <string name="choose_connection_btn">Choose Connection</string>
    <string name="reset_password_message">You will receive an email with further instructions. Don\'t worry, your account is safe with us.</string>
    <string name="save_changes">Save changes</string>
</resources>