<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.UserProfileFragment"
    android:background="@color/purple_200"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.9"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:textColor="@color/midnightblue"
            android:weightSum="100">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/userProfileImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/userprofile"
                android:scaleType="fitXY"
                android:src="@drawable/default_profile_picture" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:orientation="vertical"
                android:textColor="@color/midnightblue">

                <TextView
                    android:id="@+id/userNameProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/full_name"
                    android:textColor="@color/iconColors"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/emailUserProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/emailuserprofile"
                    android:textColor="@color/iconColors"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/userInformationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:textColor="@color/midnightblue">


            <TextView
                android:id="@+id/closeFriendsUserProfile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/close_friends_list"
                android:textColor="@color/iconColors"
                android:textSize="20sp" />

<!--            <TextView-->
<!--                android:id="@+id/scanQRUserProfile"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:fontFamily="sans-serif-light"-->
<!--                android:text="@string/scan_qr_code"-->
<!--                android:textColor="@color/iconColors"-->
<!--                android:textSize="20sp" />-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/changePasswordBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/change_password"
                android:textColor="@color/midnightblue"
                android:paddingTop="30dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/logoutButton"
                android:textColor="@color/midnightblue" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deletUserBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/delete_account"
                android:textColor="@color/midnightblue" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>