<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EventEditCalendarFragment"
    android:background="@drawable/blue_login_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/add_a_new_event_top_text"
        android:textColor="@color/midnightblue"
        android:textSize="30sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:alpha="0.6"
        android:gravity="center"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/nameEventEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/name_of_the_event"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"/>

            <TextView
                android:id="@+id/eventDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="Date"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"/>

<!--            <TextView-->
<!--                android:id="@+id/eventTimeText"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:hint="Time"-->
<!--                android:textSize="20sp"-->
<!--                android:paddingStart="20dp"-->
<!--                android:paddingEnd="0dp"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="0dp">

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eventTimeHour"
                    android:layout_marginEnd="20dp"/>
                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eventTimeMin"/>

            </LinearLayout>

            <TextView
                android:id="@+id/durationEventText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:hint="Duration"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:hint="Remind me before"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"/>

            <EditText
                android:id="@+id/detailsEventEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/details_new_event"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addEventBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/add_event_btn"
                android:textColor="@color/midnightblue"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>