<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarFragment"
    android:orientation="vertical"
    android:background="@drawable/blue_login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp">
        <Button
            android:id="@+id/previousMonthBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous"
            android:background="@android:color/transparent"
            android:textColor="@color/iconColors"
            android:textSize="10sp"/>
        <TextView
            android:id="@+id/monthYear"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="month year"
            android:textColor="@color/iconColors"
            android:textAlignment="center"
            android:textSize="35sp" />
        <Button
            android:id="@+id/nextMonthBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:background="@android:color/transparent"
            android:textColor="@color/iconColors"
            android:textSize="10sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/addItemCalendarBtn"
        android:layout_width="wrap_content"
        android:text="@string/add_event_calendar"
        android:textColor="@color/iconColors"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="m"
            android:textColor="@color/iconColors"
            android:textSize="16sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="t"
            android:textColor="@color/iconColors"
            android:textSize="16sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="w"
            android:textColor="@color/iconColors"
            android:textSize="16sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="t"
            android:textColor="@color/iconColors"
            android:textSize="16sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="f"
            android:textColor="@color/iconColors"
            android:textSize="16sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="s"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="s"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="300dp">
    </androidx.recyclerview.widget.RecyclerView>

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>