<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_200">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:scrollbars="vertical"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_margin="15dp"
                android:alpha="0.7"
                android:gravity="center"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="20dp">

                    <EditText
                        android:id="@+id/nameEventEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/name_of_the_event"
                        android:inputType="text"
                        android:padding="20dp"
                        android:textColor="@color/midnightblue"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/chooseConnectionBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="Choose Connection"
                        android:textColor="@color/midnightblue"
                        android:textAlignment="viewStart"
                        android:padding="20dp"/>

                    <TextView
                        android:id="@+id/userSelectedText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:textSize="20sp"
                        android:padding="20dp"
                        android:textColor="@color/midnightblue"
                        android:visibility="gone"/>


                    <TextView
                        android:id="@+id/minimalDurationText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:hint="Minimal duration"
                        android:textSize="20sp"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:textColor="@color/midnightblue"/>

                    <com.google.android.material.slider.Slider
                        android:id="@+id/durationSlideBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:valueFrom="10"
                        android:valueTo="120"
                        android:value="30"
                        android:stepSize="10.0"/>

                    <TextView
                        android:id="@+id/suggestionMeetingText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:hint="Date and Time we found: "
                        android:textSize="20sp"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:textColor="@color/midnightblue"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/suggestedDateText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:textSize="20sp"
                        android:padding="20dp"
                        android:textColor="@color/midnightblue"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/suggestedTimeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:textSize="20sp"
                        android:padding="20dp"
                        android:textColor="@color/midnightblue"
                        android:visibility="gone"/>

                    <EditText
                        android:id="@+id/detailsEventEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/details_new_event"
                        android:inputType="text"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:visibility="gone"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/suggestTimingBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/search_timeslot_btn"
                        android:textColor="@color/midnightblue"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/requestTimingBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/suggest_timing_btn"
                        android:textColor="@color/midnightblue"
                        android:visibility="gone"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>